Add about page, fix page bug on OSX
- OSX doesn't use ctrl-click, so check for metaKey as well
- Make drawer links work with new tab, applying the same hack

--- a/app/elements/global-behavior.html
+++ b/app/elements/global-behavior.html
@@ -37,9 +37,11 @@ recipe_behaviors.global_behavior = {
     // https://github.com/visionmedia/page.js/issues/276
     load_recipe: function(e) {
         e.stopPropagation();
-        // If this is a ctrl-click, do nothing; the browser will
-        // open it in a new tab.
-        if (e.detail.sourceEvent.ctrlKey) return;
+        // If this is a ctrl-click or shift-click, do nothing; the browser will
+        // open it in a new tab. On OSX, it's metaKey instead of ctrlKey.
+        if (e.detail.sourceEvent.ctrlKey || e.detail.sourceEvent.metaKey ||
+                e.detail.sourceEvent.metaKey)
+            return;
         // Otherwise, navigate there manually.
         var index = e.currentTarget.attributes['data-id'].value;
         page.show('/recipes/' + index);
