--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -57,7 +57,8 @@
         width: calc(98.66% - 16px);
         margin: 16px auto;
             /* change this back to white once I see it working */
-        background-color: green;
+            /* this only seems to appl to the main page (about) */
+        background-color: white;
     }
 
     paper-menu iron-icon {
