Implement visibility control in UI
- FAB only shown if user can create recipes/users
- /users only shown to Admins (as before)
- 'Toggle edit mode' only shown if user is Admin, Moderator, or owning User

--- a/app/elements/item-collection.html
+++ b/app/elements/item-collection.html
@@ -101,8 +101,9 @@
             </recipe-form>
         </template>
 
-        <!-- FAB and creation forms. -->
-        <paper-fab icon="icons:add" on-tap="create_item">
+        <!-- FAB. -->
+        <paper-fab icon="icons:add" on-tap="create_item"
+                    hidden$="[[!enableFab]]">
         </paper-fab>
 
 
@@ -139,6 +140,11 @@
                     // The parent provides 'recipes' or 'users' here.
                     itemName: {
                         type: String,
+                    },
+                    // Whether to enable the FAB.
+                    enableFab: {
+                        type: Boolean,
+                        value: false,
                     },
                     items: {
                         type: Array,
