Move toasts to the left side of the screen
- They no longer cover the FAB
- Also add some extra space to the bottom of the page to prevent toasts
  covering content

--- a/app/elements/recipe-notifications.html
+++ b/app/elements/recipe-notifications.html
@@ -18,14 +18,14 @@
 
         <paper-toast id="success_toast"
                 class="success-toast"
-                horizontal-align="right"
+                horizontal-align="left"
                 horizontal-offset="20"
                 no-cancel-on-esc-key
                 duration="4000">
         </paper-toast>
         <paper-toast id="error_toast"
                 class="error-toast"
-                horizontal-align="right"
+                horizontal-align="left"
                 horizontal-offset="20"
                 no-cancel-on-esc-key
                 duration="4000">
