Add a license file and copyright notices to every file I wrote

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,5 +1,11 @@
-<!-- Iron elements -->
-<!-- is something else here including this? it's used in the main file somehow -->
+<!--
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
+-->
+<!-- This lists all the elements we'll need to import. -->
+
+<!-- Iron elements. -->
+<!-- TODO is something else here including this? it's used in the main file somehow -->
 <!--<link rel="import" href="../bc/iron-flex-layout/classes/iron-flex-layout.html">-->
 <link rel="import" href="../bc/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bc/iron-collapse/iron-collapse.html">
@@ -10,7 +16,7 @@
 <link rel="import" href="../bc/iron-signals/iron-signals.html">
 
 
-<!-- Paper elements -->
+<!-- Paper elements. -->
 <link rel="import" href="../bc/paper-button/paper-button.html">
 <link rel="import" href="../bc/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../bc/paper-dialog/paper-dialog.html">
@@ -31,13 +37,13 @@
 <link rel="import" href="../bc/paper-toast/paper-toast.html">
 <link rel="import" href="../bc/paper-toolbar/paper-toolbar.html">
 
-<!-- Configure your routes here -->
+<!-- Client-side routes. -->
 <link rel="import" href="routing.html">
-
 
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/global-styles.html">
 
+<!-- Behavior must come before anything that uses it. -->
 <link rel="import" href="global-behavior.html">
 <link rel="import" href="form-behavior.html">
 
@@ -51,5 +57,3 @@
 <link rel="import" href="recipe-form.html">
 
 <link rel="import" href="cookie-display.html">
-
-
