--- a/app/elements/form-behavior.html
+++ b/app/elements/form-behavior.html
@@ -1,7 +1,9 @@
 <!--
-    Randy Westlund
-    2016-04
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
+<!-- This defines behavior common to all forms, such as clearing fields. -->
+
 <script>
 'use strict';
 var recipe_behaviors = recipe_behaviors || {};
