--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -1,6 +1,6 @@
 <!--
-    Randy Westlund
-    2016-07
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
 <!-- This module allows editing of a recipe. -->
 
@@ -625,7 +625,6 @@
                             id:     this.selected_recipe.id,
                             title:  this.selected_recipe.title
                     });
-                    console.log(this.recipe.linked_recipes);//DEBUG
                     //TODO this doesn't clear the menu
                     this.set('selected_recipe', null);
                 },
