--- a/app/elements/responsive-dialog.html
+++ b/app/elements/responsive-dialog.html
@@ -1,9 +1,9 @@
 <!--
-    Randy Westlund
-    2016-04
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
-<!-- This module displays a modal fullscreen on mobile and smaller on desktop.
--->
+<!-- This module displays a modal fullscreen on mobile and and normal
+     paper-dialog on desktop. -->
 
 <link rel="import" href="../bc/polymer/polymer.html">
 <link rel="import" href="../bc/paper-styles/paper-styles.html">
@@ -97,7 +97,6 @@
              removed. -->
 
         <!-- TODO this dialog should capture and close on back arrow. -->
-
 
     </template>
 </dom-module>
