--- a/app/elements/user-form.html
+++ b/app/elements/user-form.html
@@ -1,6 +1,6 @@
 <!--
-    Randy Westlund
-    2016-06
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
 <!-- This module displays a user editing form. -->
 
