--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,7 @@
+<!--
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
+-->
 <!doctype html>
 <html lang="">
 
@@ -189,7 +193,7 @@
                                         The source for this site is on
                                         <a href="https://github.com/rwestlund/recipes">
                                             GitHub</a>
-                                        under the 2-Clause-BSD license.
+                                        under the BSD-2-Clause license.
                                     </p>
                                     <div>Randy Westlund</div>
                                     <div><a href="https://www.textplain.net">
