--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -1,7 +1,9 @@
 <!--
-    Jon Doltar
-    2016-02
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
+<!-- This defines a general theme for the application. -->
+
 <!-- TODO do these do anything? -->
 <link rel="import" href="../bc/polymer/polymer.html">
 <link rel="import" href="../bc/paper-styles/typography.html">
@@ -57,7 +59,7 @@
         width: calc(98.66% - 16px);
         margin: 16px auto;
             /* change this back to white once I see it working */
-            /* this only seems to appl to the main page (about) */
+            /* TODO this seems to only affect the main page (about). */
         background-color: white;
     }
 
