--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -1,7 +1,8 @@
 <!--
-    Randy Westlund
-    2016-07
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
+<!-- This defines CSS that is imported by every element. -->
 
 <dom-module id="global-styles">
     <template>
