--- a/app/elements/cookie-display.html
+++ b/app/elements/cookie-display.html
@@ -1,8 +1,8 @@
 <!--
-    Randy Westlund
-    2016-02
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
-<!-- this module shows the current value of a cookie --> 
+<!-- This module shows the current value of a cookie. --> 
 <link rel="import" href="/bc/polymer/polymer.html">
 
 <dom-module id="cookie-display">
@@ -11,7 +11,6 @@
             :host {
                 display: none;
             }
-
         </style>
     </template>
 
@@ -28,15 +27,13 @@
                         notify: true
                     },
                 },
-                ready: function () {
-                },
-
                 read_cookie: function(name) {
                     var cstring = decodeURIComponent(document.cookie);
                     var parts = cstring.split(';');
                     var search_str = name + '=';
                     for (var i = 0; i < parts.length; i++) {
-                        while (parts[i].charAt(0) === ' ') parts[i] = parts[i].substring(1);
+                        while (parts[i].charAt(0) === ' ')
+                            parts[i] = parts[i].substring(1);
                         if (parts[i].indexOf(search_str) !== -1)
                             return parts[i].substring(search_str.length);
                     }
