--- a/app/elements/recipe-display.html
+++ b/app/elements/recipe-display.html
@@ -1,6 +1,6 @@
 <!--
-    Randy Westlund
-    2016-07
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows a recipe card. -->
 
