--- a/app/elements/recipe-notifications.html
+++ b/app/elements/recipe-notifications.html
@@ -1,6 +1,6 @@
 <!--
-    Randy Westlund
-    2016-07
+    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    This code is under the BSD-2-Clause license.
 -->
 <!-- This module listens to toast signals and displays them so that not every
      element needs a paper-toast. -->
