--- a/app/index.html
+++ b/app/index.html
@@ -201,6 +201,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <br />
+                            <br />
+                            <div>Version 2.0.0</div>
+                            <div>Released 2016-07-13</div>
                         </paper-material>
                     </section>
 
