--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -69,7 +69,7 @@
         <div class="headerbar layout horizontal center">
             <!-- This path doesn't use the hashbang, so it doesn't need the
                  load_recipe hack. -->
-            <a class="inherit-color" href="/">
+            <a class="inherit-color" href="/" on-tap="load_home">
                 <paper-button raised>
                     <iron-icon icon="icons:arrow-back"></iron-icon>
                     All Recipes
