Add lang to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,9 @@
+<!doctype html>
 <!--
     Copyright (c) 2016, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
-<!doctype html>
-<html lang="">
+<html lang="en-US">
 
 <head>
     <meta charset="utf-8">
