Remove custom-style from style imports
It never belonged here.

--- a/src/cookie-display.html
+++ b/src/cookie-display.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows the current value of a cookie. --> 
@@ -7,7 +7,7 @@
 
 <dom-module id="cookie-display">
     <template>
-        <style is="custom-style">
+        <style>
             :host {
                 display: none;
             }
