--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows a list of items, with server-side pagination and
@@ -13,7 +13,7 @@
 
 <dom-module id="item-collection">
     <template>
-        <style is="custom-style" include="global-styles"></style>
+        <style include="global-styles"></style>
         <style>
             :host {
                 display: block;
