--- a/src/recipe-notifications.html
+++ b/src/recipe-notifications.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module listens to toast signals and displays them so that not every
@@ -9,7 +9,7 @@
 
 <dom-module id="recipe-notifications">
     <template>
-        <style is="custom-style" include="global-styles"></style>
+        <style include="global-styles"></style>
         <style>
             :host {
                 display: block;
