--- a/src/user-form.html
+++ b/src/user-form.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module displays a user editing form. -->
@@ -7,7 +7,7 @@
 <link rel="import" href="../bc/polymer/polymer.html">
 
 <dom-module id="user-form">
-    <style is="custom-style" include="global-styles"></style>
+    <style include="global-styles"></style>
     <template>
         <responsive-dialog id="dialog"
                    title="[[title]]"
