--- a/src/recipe-display.html
+++ b/src/recipe-display.html
@@ -1,5 +1,5 @@
 <!--
-    Copyright (c) 2016, Randy Westlund. All rights reserved.
+    Copyright (c) 2016-2017, Randy Westlund. All rights reserved.
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows a recipe card. -->
@@ -8,7 +8,7 @@
 
 <dom-module id="recipe-display">
     <template>
-        <style is="custom-style" include="global-styles"></style>
+        <style include="global-styles"></style>
         <style>
             :host {
                 display: block;
