Fix module import path

--- a/src/cookie-display.html
+++ b/src/cookie-display.html
@@ -3,7 +3,7 @@
     This code is under the BSD-2-Clause license.
 -->
 <!-- This module shows the current value of a cookie. --> 
-<link rel="import" href="/bc/polymer/polymer.html">
+<link rel="import" href="../bc/polymer/polymer.html">
 
 <dom-module id="cookie-display">
     <template>
