Switch to external responsive-dialog
This was moved to a separate repository.

--- a/src/elements.html
+++ b/src/elements.html
@@ -37,6 +37,8 @@
 <link rel="import" href="../bc/paper-toast/paper-toast.html">
 <link rel="import" href="../bc/paper-toolbar/paper-toolbar.html">
 
+<link rel="import" href="../bc/polymer-responsive-dialog/responsive-dialog.html">
+
 <!-- Client-side routes. -->
 <link rel="import" href="routing.html">
 
@@ -48,7 +50,6 @@
 <link rel="import" href="form-behavior.html">
 
 <link rel="import" href="recipe-notifications.html">
-<link rel="import" href="responsive-dialog.html">
 <link rel="import" href="item-collection.html">
 <link rel="import" href="user-display.html">
 <link rel="import" href="user-form.html">
